[FIP] Corrected spacing for Canada Wordmark

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -12,7 +12,8 @@ footer {
         line-height: 30px;
         object, img {
             height: 40px;
-            margin-top: 5px;
+            margin-top: 20px;
+			margin-bottom: 10px;
             width: auto;
         }
         a {
@@ -26,7 +27,7 @@ footer {
         }
     }
     .tofpg {
-		line-height: 60px;
+		line-height: 90px;
     }
     nav {
         position: relative;
@@ -46,11 +47,18 @@ footer {
 }
 
 @media screen and (max-width: 480px) {
-    footer .brand {
-        object, img {
-            height: 25px;
-            margin-top: 15px;
-            padding-right: 10px;
-        }
+    footer {
+    	.tofpg {
+			line-height: 60px;
+		}
+    	.brand {
+	        object, img {
+	            height: 25px;
+	            margin-top: 15px;
+				margin-bottom: 5px;
+	            padding-right: 10px;
+	     	}
+    	}
     }
+    
 }
